--- a/html/blog.html
+++ b/html/blog.html
@@ -15,7 +15,7 @@
 <div class="wrapper">    
     <ul class="header">
         <li><a href="#">首頁</a></li>
-        <li><a href="#">部落格</a></li>
+        <li><a href="blog.html">部落格</a></li>
     </ul>
 
     <ul class="hero">
@@ -39,7 +39,7 @@
                 </li>
                 <li><h2>自學前端不用怕：從零開始的三大關鍵</h2></li>
                 <li><p>嗨，我是 Alyse，一名前端工程師兼職涯諮詢師。一直以來，我都很喜歡在部落格分享學習與工作心得，也常有讀者問：「我想轉職/自學前端，該從哪裡開始？」其實自學的過程既自由又具挑戰性。我整理了三大關鍵，幫助你在短期內建立紮實基礎，並快速累積實戰經驗。希望能替你的前端之路帶來一些啟發與動力！</p></li>
-                <li><a href="#">閱讀內文</a></li>
+                <li><a href="detail.html">閱讀內文</a></li>
             </ul>
         </li>
     </ul>
