--- a/html/detail.html
+++ b/html/detail.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <ul class="header">
             <li><a href="#">首頁</a></li>
-            <li><a href="#">部落格</a></li>
+            <li><a href="blog.html">部落格</a></li>
         </ul>
 
         <ul class="banner">
